<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidCharts Demo</string>
    <string name="gridchart">GridChart</string>
    <string name="linechart">LineChart</string>
    <string name="sliplinechart">SlipLineChart</string>
    <string name="slipareachart">SlipAreaChart</string>
    <string name="slipbandchart">SlipBandChart</string>
    <string name="stickchart">StickChart</string>
    <string name="slipstickchart">SlipStickChart</string>
    <string name="coloredslipstickchart">ColoredSlipStickChart</string>
    <string name="mastickchart">MAStickChart</string>
    <string name="maslipstickchart">MASlipStickChart</string>
    <string name="minusstickchart">MinusStickChart</string>
    <string name="slipminusstickchart">SlipMinusStickChart</string>
    <string name="candlestickchart">CandleStickChart</string>
    <string name="slipcandlestickchart">SlipCandleStickChart</string>
    <string name="macandlestickchart">MACandleStickChart</string>
    <string name="maslipcandlestickchart">MASlipCandleStickChart</string>
    <string name="bollmaslipcandlestickchart">BOLLMASlipCandleStickChart</string>
    <string name="macdchart">MACDChart</string>
    <string name="piechart">PieChart</string>
    <string name="piechart_title1">Alpha</string>
    <string name="piechart_title2">Bravo</string>
    <string name="piechart_title3">Charlie</string>
    <string name="piechart_title4">Delta</string>
    <string name="piechart_title5">Echo</string>
    <string name="rosechart">RoseChart</string>
    <string name="rosechart_title1">Alpha</string>
    <string name="rosechart_title2">Bravo</string>
    <string name="rosechart_title3">Charlie</string>
    <string name="rosechart_title4">Delta</string>
    <string name="rosechart_title5">Echo</string>
    <string name="rosechart_title6">Fox</string>
    <string name="spiderwebchart">SpiderWebChart</string>
    <string name="spiderwebchart_title1">Alpha</string>
    <string name="spiderwebchart_title2">Bravo</string>
    <string name="spiderwebchart_title3">Charlie</string>
    <string name="spiderwebchart_title4">Delta</string>
    <string name="spiderwebchart_title5">Echo</string>
    <string name="radarchart">RadarChart</string>
    <string name="radarchart_title1">Alpha</string>
    <string name="radarchart_title2">Bravo</string>
    <string name="radarchart_title3">Charlie</string>
    <string name="radarchart_title4">Delta</string>
    <string name="radarchart_title5">Echo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_grid_chart">Grid Chart</string>
    <string name="title_activity_line_chart">Line Chart</string>
    <string name="title_activity_slip_line_chart">Slip Line Chart</string>
    <string name="title_activity_slip_area_chart">Slip Area Chart</string>
    <string name="title_activity_slip_band_chart">Slip Band Chart</string>
    <string name="title_activity_stick_chart">Stick Chart</string>
    <string name="title_activity_slip_stick_chart">Slip Stick Chart</string>
    <string name="title_activity_colored_slip_stick_chart">Colored Slip Stick Chart</string>
    <string name="title_activity_ma_stick_chart">MA Stick Chart</string>
    <string name="title_activity_ma_slip_stick_chart">MA Slip Stick Chart</string>
    <string name="title_activity_minus_stick_chart">Minus Stick Chart</string>
    <string name="title_activity_slip_minus_stick_chart">Slip Minus Stick Chart</string>
    <string name="title_activity_candle_stick_chart">Candle Stick Chart</string>
    <string name="title_activity_slip_candle_stick_chart">Slip Candle Stick Chart</string>
    <string name="title_activity_ma_candle_stick_chart">MA Candle Stick Chart</string>
    <string name="title_activity_ma_slip_candle_stick_chart">MA Slip Candle Stick Chart</string>
    <string name="title_activity_boll_ma_slip_candle_stick_chart">BOLL MA Slip Candle Stick Chart</string>
    <string name="title_activity_macd_chart">MACD Chart</string>
    <string name="title_activity_pie_chart">Pie Chart</string>
    <string name="title_activity_rose_chart">Rose Chart</string>
    <string name="title_activity_spider_web_chart">Spider Web Chart</string>
    <string name="title_activity_radar_chart">Radar Chart</string>
    <string name="title_activity_slip_band_area_chart">Slip Band Area Chart</string>
    <string name="title_activity_chart_list">Chart List</string>
    <string name="title_activity_donut_chart">Donut Chart</string>

    <string name="chart_type_vol">VOL</string>
    <string name="chart_type_macd">MACD</string>
    <string name="chart_type_kdj">KDJ</string>
    <string name="chart_type_rsi">RSI</string>
    <string name="chart_type_wr">WR</string>
    <string name="chart_type_cci">CCI</string>
    <string name="chart_type_boll">BOLL</string>
    <string name="chart_type_setting">设置</string>
    <string name="chart_type_handicap">盘口</string>
    <string name="chart_type_1min">分时</string>
    <string name="chart_type_2days">2日</string>
    <string name="chart_type_3days">3日</string>
    <string name="chart_type_detail">明细</string>
    <string name="chart_type_day">日</string>
    <string name="chart_type_week">周</string>
    <string name="chart_type_month">月</string>
    <string name="chart_type_minute">分钟</string>
    <string name="chart_type_1minute">1分</string>
    <string name="chart_type_5minute">5分</string>
    <string name="chart_type_15minute">15分</string>
    <string name="chart_type_30minute">30分</string>
    <string name="chart_type_1hour">1小时</string>
    <string name="chart_type_2hour">2小时</string>
    <string name="chart_type_4hour">4小时 </string>
    
    <string name="buy_price_label">买价</string>
    <string name="high_label">最高</string>
    <string name="sell_price_label">卖价</string>
    <string name="low_label">最低</string>
    
    <string name="detail_time">时间</string>
    <string name="detail_price">价格</string>
    <string name="detail_count">数量</string>
    
    <string name="now_buy">订立买</string>
    <string name="now_sell">订立卖</string>
    <string name="term_buy">调期买</string>
    <string name="term_sell">调期卖</string>
    <string name="go_trade">去交易下单</string>
    <string name="horizontal">横屏</string>
    
    <string name="buy_label">买:</string>
    <string name="sell_label">卖:</string>
    <string name="horzizontal_high_label">高:</string>
    <string name="horzizontal_low_label">低:</string>
    
    <string name="setting">设置</string>
</resources>