<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/gridchart" />

        <cn.limc.androidcharts.diagram.GridChart
            android:id="@+id/gridchart"
            android:layout_width="fill_parent"
            android:layout_height="240dip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/linechart" />

        <cn.limc.androidcharts.diagram.LineChart
            android:id="@+id/linechart"
            android:layout_width="fill_parent"
            android:layout_height="240dip" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sliplinechart" />

        <cn.limc.androidcharts.diagram.SlipLineChart
            android:id="@+id/sliplinechart"
            android:layout_width="fill_parent"
            android:layout_height="240dip" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/slipareachart" />

        <cn.limc.androidcharts.diagram.SlipAreaChart
            android:id="@+id/slipareachart"
            android:layout_width="fill_parent"
            android:layout_height="240dip" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/slipbandchart" />

        <cn.limc.androidcharts.diagram.SlipBandAreaChart
            android:id="@+id/slipbandchart"
            android:layout_width="fill_parent"
            android:layout_height="240dip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/stickchart" />

        <cn.limc.androidcharts.diagram.StickChart
            android:id="@+id/stickchart"
            android:layout_width="fill_parent"
            android:layout_height="240dip" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/slipstickchart" />

        <cn.limc.androidcharts.diagram.SlipStickChart
            android:id="@+id/slipstickchart"
            android:layout_width="fill_parent"
            android:layout_height="240dip" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/coloredslipstickchart" />

        <cn.limc.androidcharts.diagram.ColoredSlipStickChart
            android:id="@+id/coloredslipstickchart"
            android:layout_width="fill_parent"
            android:layout_height="240dip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/mastickchart" />

        <cn.limc.androidcharts.diagram.MAStickChart
            android:id="@+id/mastickchart"
            android:layout_width="fill_parent"
            android:layout_height="240dip" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/maslipstickchart" />

        <cn.limc.androidcharts.diagram.MASlipStickChart
            android:id="@+id/maslipstickchart"
            android:layout_width="fill_parent"
            android:layout_height="240dip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/minusstickchart" />

        <cn.limc.androidcharts.diagram.MinusStickChart
            android:id="@+id/minusstickchart"
            android:layout_width="fill_parent"
            android:layout_height="240dip" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/slipminusstickchart" />

        <cn.limc.androidcharts.diagram.SlipMinusStickChart
            android:id="@+id/slipminusstickchart"
            android:layout_width="fill_parent"
            android:layout_height="240dip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/candlestickchart" />

        <cn.limc.androidcharts.diagram.CandleStickChart
            android:id="@+id/candlestickchart"
            android:layout_width="fill_parent"
            android:layout_height="240dip" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/slipcandlestickchart" />

        <cn.limc.androidcharts.diagram.SlipCandleStickChart
            android:id="@+id/slipcandlestickchart"
            android:layout_width="fill_parent"
            android:layout_height="240dip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/macandlestickchart" />

        <cn.limc.androidcharts.diagram.MACandleStickChart
            android:id="@+id/macandlestickchart"
            android:layout_width="fill_parent"
            android:layout_height="240dip" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/maslipcandlestickchart" />

        <cn.limc.androidcharts.diagram.MASlipCandleStickChart
            android:id="@+id/maslipcandlestickchart"
            android:layout_width="fill_parent"
            android:layout_height="240dip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/bollmaslipcandlestickchart" />
        
        <cn.limc.androidcharts.diagram.BOLLMASlipCandleStickChart
            android:id="@+id/bollmaslipcandlestickchart"
            android:layout_width="fill_parent"
            android:layout_height="240dip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/macdchart" />
        
        <cn.limc.androidcharts.diagram.MACDChart
            android:id="@+id/macdchart"
            android:layout_width="fill_parent"
            android:layout_height="240dip"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/piechart" />

        <cn.limc.androidcharts.diagram.PieChart
            android:id="@+id/piechart"
            android:layout_width="fill_parent"
            android:layout_height="240dip" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/rosechart" />

        <cn.limc.androidcharts.diagram.RoseChart
            android:id="@+id/rosechart"
            android:layout_width="fill_parent"
            android:layout_height="240dip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/spiderwebchart" />

        <cn.limc.androidcharts.diagram.SpiderWebChart
            android:id="@+id/spiderwebchart"
            android:layout_width="fill_parent"
            android:layout_height="240dip" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/radarchart" />

        <cn.limc.androidcharts.diagram.RadarChart
            android:id="@+id/radarchart"
            android:layout_width="fill_parent"
            android:layout_height="240dip" />
        
    </LinearLayout>

</ScrollView>