<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/white"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/tv_1minute"
       	android:layout_width="@dimen/popup_width"
       	android:layout_height="@dimen/tickchart_order_height"
       	android:gravity="center"
       	android:textColor="@drawable/lightgray"
       	android:text="@string/chart_type_1minute" />
    <View
        android:layout_width="@dimen/popup_width"
       	android:layout_height="0.5dip"
       	android:background="@drawable/lightgray" >
    </View>
    <TextView
        android:id="@+id/tv_5minute"
       	android:layout_width="@dimen/popup_width"
       	android:layout_height="@dimen/tickchart_order_height"
       	android:gravity="center"
       	android:textColor="@drawable/lightgray"
       	android:text="@string/chart_type_5minute" />
    <View
        android:layout_width="@dimen/popup_width"
       	android:layout_height="0.5dip"
       	android:background="@drawable/lightgray" >
    </View>
    <TextView
        android:id="@+id/tv_15minute"
       	android:layout_width="@dimen/popup_width"
       	android:layout_height="@dimen/tickchart_order_height"
       	android:gravity="center"
       	android:textColor="@drawable/lightgray"
       	android:text="@string/chart_type_15minute" />
    <View
        android:layout_width="@dimen/popup_width"
       	android:layout_height="0.5dip"
       	android:background="@drawable/lightgray" >
    </View>
    <TextView
        android:id="@+id/tv_30minute"
       	android:layout_width="@dimen/popup_width"
       	android:layout_height="@dimen/tickchart_order_height"
       	android:gravity="center"
       	android:textColor="@drawable/lightgray"
       	android:text="@string/chart_type_30minute" />
    <View
        android:layout_width="@dimen/popup_width"
       	android:layout_height="0.5dip"
       	android:background="@drawable/lightgray" >
    </View>
    <TextView
        android:id="@+id/tv_1hour"
       	android:layout_width="@dimen/popup_width"
       	android:layout_height="@dimen/tickchart_order_height"
       	android:gravity="center"
       	android:textColor="@drawable/lightgray"
       	android:text="@string/chart_type_1hour" />
    <View
        android:layout_width="@dimen/popup_width"
       	android:layout_height="0.5dip"
       	android:background="@drawable/lightgray" >
    </View>
    <TextView
        android:id="@+id/tv_2hour"
       	android:layout_width="@dimen/popup_width"
       	android:layout_height="@dimen/tickchart_order_height"
       	android:gravity="center"
       	android:textColor="@drawable/lightgray"
       	android:text="@string/chart_type_2hour" />
    <View
        android:layout_width="@dimen/popup_width"
       	android:layout_height="0.5dip"
       	android:background="@drawable/lightgray" >
    </View>
    <TextView
        android:id="@+id/tv_4hour"
       	android:layout_width="@dimen/popup_width"
       	android:layout_height="@dimen/tickchart_order_height"
       	android:gravity="center"
       	android:textColor="@drawable/lightgray"
       	android:text="@string/chart_type_4hour" />
</LinearLayout>